--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
 }
 .container {
   height: 80vh;
-  margin: 10px auto;
+  margin: 2rem auto;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -12,8 +12,8 @@ body {
 }
 
 header {
-  font-size: large;
-  font-weight: bold;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 #rspImg {
@@ -29,8 +29,21 @@ header {
 }
 
 #result {
-  display: none;
-} 
+  visibility: hidden;
+  display: flex;
+  margin: 0.5rem;
+  align-items: center;
+  flex-direction: column;
+}
+
+#result > div {
+  width: 100%;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 1rem;
+  color: palevioletred;
+}
 
 .buttons {
   display: flex;
