--- a/index.css
+++ b/index.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: 'DungGeunMo';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background-color: cornsilk;
+  font-family: 'DungGeunMo';
 }
 .container {
   height: 80vh;
