폴더 분리 및 이름 변경

--- a/view/rspGame.html
+++ b/view/rspGame.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./reset.css" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
+    <link href="../css/reset.css" rel="stylesheet">
+    <link href="../css/rspGame.css" rel="stylesheet">
     <title>가위바위보~~!</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
     <header>✨가위바위보를 해봅시다✨</header>
     <section id="rspImg">
       <ul style="transform:">
-        <li class="rock" ><img src="./img/✊.svg" alt="바위"></li>
-        <li class="scissors"><img src="./img/✌.svg" alt="가위"></li>
-        <li class="paper"><img src="./img/🖐.svg" alt="보"></li>
+        <li class="rock" ><img src="../img/✊.svg" alt="바위"></li>
+        <li class="scissors"><img src="../img/✌.svg" alt="가위"></li>
+        <li class="paper"><img src="../img/🖐.svg" alt="보"></li>
       </ul>
     </section>
     <section id="result">
@@ -28,6 +28,6 @@
       <button class="paper">보</button>
     </div>
   </div>
-  <script src="./rsp.js"></script>
+  <script src="../js/rsp.js"></script>
 </body>
 </html>
