✨ [add] 타이머 1번 돌아가게 추가

--- a/view/findDiffGame.html
+++ b/view/findDiffGame.html
@@ -11,8 +11,7 @@
   <body>
     <div class="container">
       <header>✨다른 색상 찾기 해봅시다✨</header>
-      <section>타이머
-      </section>
+      <section id="timer"><div>0 초</div></section>
       <table>
       </table>
     </div>
